LSP updates